--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -8,5 +8,15 @@
   background-color: transparent !important;
 }
 
+.navbar-light .navbar-toggler {
+  border-color: black !important;
+}  
 
+.navbar-light .navbar-nav .nav-link {
+  color: white !important;
+}
 
+.mr-auto, .mx-auto {
+  margin-right: auto!important;
+  width: 10%;
+}
