--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -1,21 +1,24 @@
 .feedform {
-  background: white;
+  background: transparent;
   padding-top: 4%;
+  background-color: rgb(9,62,121);
+  height: inherit;
 }
 
 .feed-container {
   display: inline-flex;
   position: fixed;
-  left: 23%;
+  left: 25%;
   z-index: 10;
   background: inherit;
-  width: 60%;
+  width: 50%;
   
 }
 
 .express {
   display: inherit;
   padding-top: 10%;
+  padding-right: 15%;
 }
 
 #textarea {
