--- a/client/src/css/Search.css
+++ b/client/src/css/Search.css
@@ -1,13 +1,14 @@
 .look {
   display: inline-flex;
+  padding-top: 35%;
 }
 
 .post {
-  color: rgb(240, 68, 211) !important;
+  color: rgb(244,140,180) !important;
   font-family: 'Amatic SC', cursive;
   font-size: 20px !important;
   background-color: transparent !important;
-  border-color: rgb(240, 68, 211) !important;
+  border-color: rgb(244,140,180) !important;
   position: relative;
   height: 40px;
   width: 100px;
