--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -104,6 +104,7 @@
   padding: 20px 16px 16px 16px;
   width: 600px !important;
   border-radius: 2% !important;
+  background-color: rgb(103, 139, 182) !important;
 }
 
 .pic {
@@ -115,15 +116,20 @@
 
 .userName {
   width: 20%;
+  margin: 0;
+  color: rgb(244,140,180) !important;
+  font-family: 'Amatic SC', cursive;
+  font-size: 2.5rem;
 }
 
 .userdetails {
   text-align: right;
   color: black;
+  margin: 0;
 }
 
 .userpost {
-  color: rgb(83, 82, 82);
+  color: rgb(5, 5, 5);
   font-size: 15px;
   text-align: left;
   line-height: 20px;
