--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -11,9 +11,11 @@
   display: inline-flex;
   position: fixed;
   left: 25%;
-  z-index: 10;
+  z-index: 15;
   background: inherit;
   width: 50%;
+  height: 10%;
+  padding: 8%;
   
 }
 
@@ -84,7 +86,7 @@
 #posts {
   position: absolute;
   left: 20%;
-  
+  padding-top: 7%;
 }
 
 #feedsugg {
