--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -7,7 +7,7 @@
   position: absolute;
   place-content: center;
   width: calc(100%);
-  background-image: url("../images/backcolor.jpg");
+  background-color: darkslategray;
 }
 
 .container {
@@ -41,6 +41,7 @@
   border-radius: 0% !important;
   background-color: transparent !important;
   border-bottom: 1px solid rgba(167, 164, 164, 0.842) !important;
+  color: white !important;
 }
 
 textarea:hover, 
