--- a/client/src/css/Feed.css
+++ b/client/src/css/Feed.css
@@ -32,7 +32,7 @@
   height: 40px;
   padding: 8px;
   resize: none;
-  border-bottom: 1px solid rgba(75, 74, 74, 0.959) !important;
+  border-bottom: 1px solid rgba(167, 164, 164, 0.842) !important;
   background-color: rgba(119, 154, 248, 0) !important;
   border-radius: 0% !important;
   width: 50% !important;
@@ -102,9 +102,10 @@
   line-height: 20px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2%;
   padding: 20px 16px 16px 16px;
   width: 600px !important;
-  background-color: rgb(60, 61, 61) !important;
+  background-color: white !important;
 }
 
 .pic {
@@ -124,12 +125,12 @@
 
 .userdetails {
   text-align: right;
-  color: white !important;
+  color: black !important;
   margin: 0;
 }
 
 .userpost {
-  color: white;
+  color: black;
   font-size: 15px;
   text-align: left;
   line-height: 20px;
@@ -162,7 +163,7 @@ img.card-img-top {
   align-items: center;
   margin-left: 10%;
   margin-right: 2%;
-  color: white;
+  color: black;
 }
 .commentcount {
   align-items: center;
@@ -174,13 +175,13 @@ img.card-img-top {
 
 #comments {
   margin-left: 5%;
-  background-color: white;
+  background-color: black;
   color: rgb(244,140,180);
   border-color: rgb(244,140,180);
 }
 
 #toggler {
-  color: white;
+  color: black;
 }
 
 .usersname {
