--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -4,6 +4,10 @@
   font-size: 50px;
 }
 
+.navbar {
+  background-color: darkslategray;
+}
+
 .bg-white {
   background-color: transparent !important;
 }
