css profile followers and following

--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -101,6 +101,12 @@ p {
   width: fit-content;
 }
 
+#gridfollowers {
+  margin-top: 6%;
+  background: transparent;
+  border: none;
+}
+
 .grid {
   width: 350px;
   height: 150px;
