--- a/client/src/css/Allprofiles.css
+++ b/client/src/css/Allprofiles.css
@@ -15,6 +15,7 @@
   margin: 0;
   padding: 0;
   position: absolute;
+  padding-right: 18%;
 }
 
 .card {
@@ -40,6 +41,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  padding-left: 15%;
 }
 
 .col-7 {
