--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,5 +13,6 @@ html, body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: darkslategray;
 }
 
